# PiSovereign

./: .clippy.toml  .dockerignore  .gitignore  .tarpaulin.toml  ANALYSE.md  ANALYSIS.md  ANALYSIS_REPORT.md  CHANGELOG.md  Cargo.toml  DETAILLIERTE_ANALYSE.md  Dockerfile  GOALS.md  Justfile  PROJEKTANALYSE.md  PROJEKT_ANALYSE.md  README.md  config.toml  config.toml.example  deny.toml  docker-compose.production.yml  docker-compose.yml  release-please-config.json  rust-toolchain.toml  rustfmt.toml  ziel.md
crates/ai_core/: Cargo.toml
crates/ai_core/src/: config.rs  error.rs  lib.rs  ports.rs  selector.rs
crates/ai_core/src/hailo/: client.rs  mod.rs  streaming.rs
crates/ai_core/src/ollama/: client.rs  embedding.rs  mod.rs  streaming.rs
crates/ai_core/tests/: wiremock_tests.rs
crates/ai_speech/: Cargo.toml
crates/ai_speech/src/: config.rs  converter.rs  error.rs  lib.rs  ports.rs  types.rs
crates/ai_speech/src/providers/: hybrid.rs  mod.rs  openai.rs  piper.rs  whisper_cpp.rs
crates/ai_speech/tests/: integration_tests.rs
crates/application/: Cargo.toml
crates/application/proptest-regressions/: command_parser.txt
crates/application/src/: command_parser.rs  date_parser.rs  error.rs  lib.rs  request_context.rs
crates/application/src/command_parser/: intent_mapping.rs  llm.rs  mod.rs  quick_patterns.rs
crates/application/src/ports/: approval_queue.rs  audit_log.rs  cache_port.rs  calendar_port.rs  contact_port.rs  conversation_store.rs  database_health_port.rs  draft_store.rs  email_port.rs  embedding_port.rs  encryption_port.rs  inference_port.rs  memory_store.rs  message_gateway_port.rs  messenger_port.rs  mod.rs  model_registry_port.rs  reminder_port.rs  secret_store.rs  speech_port.rs  suspicious_activity_port.rs  task_port.rs  transit_port.rs  user_profile_store.rs  weather_port.rs  websearch_port.rs
crates/application/src/services/: agent_service.rs  approval_service.rs  briefing_service.rs  calendar_service.rs  chat_service.rs  conversation_context.rs  email_service.rs  health_service.rs  location_helper.rs  memory_enhanced_chat.rs  memory_service.rs  messenger_chat_service.rs  mod.rs  notification_service.rs  prompt_sanitizer.rs  reminder_formatter.rs  reminder_service.rs  voice_message_service.rs
crates/domain/: Cargo.toml
crates/domain/src/: commands.rs  errors.rs  lib.rs
crates/domain/src/entities/: approval_request.rs  audit_entry.rs  briefing.rs  chat_message.rs  conversation.rs  email_draft.rs  memory.rs  mod.rs  prompt_security.rs  reminder.rs  user_profile.rs  voice_message.rs  web_search.rs
crates/domain/src/value_objects/: approval_id.rs  contact_id.rs  conversation_id.rs  draft_id.rs  email_address.rs  geo_location.rs  humidity.rs  memory_id.rs  messenger_source.rs  mod.rs  phone_number.rs  priority.rs  reminder_id.rs  task_status.rs  tenant.rs  tenant_id.rs  timezone.rs  user_id.rs
crates/domain/tests/: proptest_tests.proptest-regressions  proptest_tests.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: config.rs  lib.rs  retry.rs  scheduled_tasks.rs
crates/infrastructure/src/adapters/: api_key_hasher.rs  cached_inference_adapter.rs  caldav_calendar_adapter.rs  carddav_contact_adapter.rs  circuit_breaker.rs  degraded_inference.rs  encryption_adapter.rs  env_secret_store.rs  hailo_inference_adapter.rs  mod.rs  model_registry_adapter.rs  ollama_inference_adapter.rs  proton_email_adapter.rs  signal_adapter.rs  speech_adapter.rs  suspicious_activity_adapter.rs  task_adapter.rs  transit_adapter.rs  vault_secret_store.rs  weather_adapter.rs  websearch_adapter.rs  whatsapp_adapter.rs
crates/infrastructure/src/cache/: mod.rs  moka_cache.rs  multi_layer_cache.rs  redb_cache.rs  sled_cache.rs
crates/infrastructure/src/chaos/: chaos_context.rs  fault_injector.rs  fault_policy.rs  mod.rs
crates/infrastructure/src/config/: cache.rs  database.rs  integrations.rs  memory.rs  messenger.rs  mod.rs  resilience.rs  security.rs  server.rs  vault.rs
crates/infrastructure/src/http/: correlated_client.rs  mod.rs
crates/infrastructure/src/persistence/: approval_queue.rs  async_connection.rs  async_conversation_store.rs  mod.rs  (+12 more)
crates/infrastructure/tests/: persistence_tests.rs  wiremock_tests.rs
crates/integration_caldav/: Cargo.toml
crates/integration_caldav/src/: client.rs  lib.rs  task.rs
crates/integration_caldav/tests/: wiremock_tests.rs
crates/integration_carddav/: Cargo.toml
crates/integration_carddav/src/: client.rs  contact.rs  lib.rs
crates/integration_carddav/tests/: wiremock_tests.rs
crates/integration_proton/: Cargo.toml
crates/integration_proton/src/: client.rs  imap_client.rs  lib.rs  reconnect.rs  smtp_client.rs  tls.rs
crates/integration_proton/tests/: integration_tests.rs
crates/integration_signal/: Cargo.toml
crates/integration_signal/src/: client.rs  error.rs  lib.rs  types.rs
crates/integration_signal/tests/: integration_tests.rs
crates/integration_transit/: Cargo.toml
crates/integration_transit/src/: client.rs  config.rs  error.rs  geocoding.rs  lib.rs  models.rs
crates/integration_transit/tests/: wiremock_tests.rs
crates/integration_weather/: Cargo.toml
crates/integration_weather/src/: client.rs  lib.rs  models.rs
crates/integration_weather/tests/: wiremock_tests.rs
crates/integration_websearch/: Cargo.toml
crates/integration_websearch/src/: brave.rs  config.rs  duckduckgo.rs  error.rs  lib.rs  models.rs  provider.rs  urlencoding.rs
crates/integration_websearch/tests/: wiremock_tests.rs
crates/integration_whatsapp/: Cargo.toml
crates/integration_whatsapp/src/: client.rs  lib.rs  webhook.rs
crates/integration_whatsapp/tests/: wiremock_tests.rs
crates/presentation_cli/: Cargo.toml
crates/presentation_cli/src/: backup.rs  main.rs  migrate_keys.rs
crates/presentation_cli/tests/: integration_test.rs
crates/presentation_http/: Cargo.toml
crates/presentation_http/benches/: chat_pipeline.rs
crates/presentation_http/src/: config_reload.rs  error.rs  lib.rs  main.rs  openapi.rs  routes.rs  state.rs
crates/presentation_http/tests/: integration_tests.rs
(+119 files in other folders)
