[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/ai_core",
    "crates/presentation_http",
    "crates/presentation_cli",
    "crates/integration_whatsapp",
    "crates/integration_caldav",
    "crates/integration_proton",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Andreas Reichel"]
license = "MIT"
repository = "https://github.com/andreasreichel/PiSovereign"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Async traits
async-trait = "0.1"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
config = "0.14"

# Testing
tokio-test = "0.4"

# Internal crates
domain = { path = "crates/domain" }
application = { path = "crates/application" }
infrastructure = { path = "crates/infrastructure" }
ai_core = { path = "crates/ai_core" }
