[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/ai_core",
    "crates/presentation_http",
    "crates/presentation_cli",
    "crates/integration_whatsapp",
    "crates/integration_caldav",
    "crates/integration_proton",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Andreas Reichel"]
license = "MIT"
repository = "https://github.com/andreasreichel/PiSovereign"

# Workspace-wide lints
[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Correctness
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }

# Style & Pedantic (more opinionated)
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow certain patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
redundant_pub_crate = "allow"
future_not_send = "allow"
significant_drop_tightening = "allow"
literal_string_with_formatting_args = "allow"

# Deny these explicitly
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Async traits
async-trait = "0.1"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
config = "0.14"

# Testing
tokio-test = "0.4"
mockall = "0.13"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Atomic swapping for config reload
arc-swap = "1.7"

# Secret management
vaultrs = "0.7"

# Synchronization primitives
parking_lot = "0.12"

# Natural language date parsing
fuzzydate = "0.4"

# Property-based testing
proptest = "1.5"

# Internal crates
domain = { path = "crates/domain" }
application = { path = "crates/application" }
infrastructure = { path = "crates/infrastructure" }
ai_core = { path = "crates/ai_core" }
integration_proton = { path = "crates/integration_proton" }
integration_caldav = { path = "crates/integration_caldav" }
integration_whatsapp = { path = "crates/integration_whatsapp" }
