[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/ai_core",
    "crates/ai_speech",
    "crates/presentation_http",
    "crates/presentation_cli",
    "crates/integration_whatsapp",
    "crates/integration_signal",
    "crates/integration_caldav",
    "crates/integration_proton",
    "crates/integration_weather",
    "crates/integration_websearch",
    "crates/integration_transit",
]

[workspace.package]
version = "0.3.3"
edition = "2024"
authors = ["Andreas Reichel"]
license = "MIT"
repository = "https://github.com/twohreichel/PiSovereign"

# Workspace-wide lints
[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Correctness
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }

# Style & Pedantic (more opinionated)
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow format_push_string - it's often more readable
format_push_string = "allow"

# Allow certain patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
redundant_pub_crate = "allow"
future_not_send = "allow"
significant_drop_tightening = "allow"
literal_string_with_formatting_args = "allow"

# Deny these explicitly
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.13", features = ["json", "query", "form", "stream", "multipart"] }

# Bytes handling
bytes = "1.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry for distributed tracing
opentelemetry = { version = "0.31", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "grpc-tonic"] }
tracing-opentelemetry = "0.32"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Async traits
async-trait = "0.1"

# UUID
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
config = "0.15"
toml = "0.9"

# Testing
tokio-test = "0.4"
mockall = "0.14"
tempfile = "3.15"

# Database
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Atomic swapping for config reload
arc-swap = "1.7"

# Secret management
vaultrs = "0.7"

# Synchronization primitives
parking_lot = "0.12"

# Natural language date parsing
fuzzydate = "0.4"

# Property-based testing
proptest = "1.5"

# HTTP mocking for integration tests
wiremock = "0.6"

# Container-based integration tests
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres", "redis"] }

# Caching
moka = { version = "0.12", features = ["future"] }
blake3 = "1.5"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-redoc = { version = "6", features = ["axum"] }

# Pattern matching optimization
aho-corasick = "1.1"

# Password hashing
argon2 = "0.5"

# Secret management with zeroization
secrecy = { version = "0.10", features = ["serde"] }

# Encryption
chacha20poly1305 = "0.10"

# Timezone validation
chrono-tz = "0.10"

# Template engine
tera = "1.20"

# Cron scheduling
tokio-cron-scheduler = "0.15"
cron = "0.15"

# S3 storage (for backups)
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-native-tls"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
domain = { path = "crates/domain" }
application = { path = "crates/application" }
infrastructure = { path = "crates/infrastructure" }
ai_core = { path = "crates/ai_core" }
ai_speech = { path = "crates/ai_speech" }
presentation_http = { path = "crates/presentation_http" }
integration_proton = { path = "crates/integration_proton" }
integration_caldav = { path = "crates/integration_caldav" }
integration_whatsapp = { path = "crates/integration_whatsapp" }
integration_signal = { path = "crates/integration_signal" }
integration_weather = { path = "crates/integration_weather" }
integration_websearch = { path = "crates/integration_websearch" }
integration_transit = { path = "crates/integration_transit" }

