[package]
name = "ai_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
domain.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
parking_lot.workspace = true
tokio-stream = "0.1"
futures = "0.3"

[dev-dependencies]
tokio-test.workspace = true
wiremock.workspace = true
serde_json.workspace = true
proptest.workspace = true
