[package]
name = "ai_speech"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Speech-to-Text and Text-to-Speech abstractions for PiSovereign"

[lints]
workspace = true

[dependencies]
# Internal crates
domain.workspace = true

# Error handling
thiserror.workspace = true

# Async
async-trait.workspace = true
tokio.workspace = true

# Tracing
tracing.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client
reqwest.workspace = true

# Bytes handling
bytes.workspace = true

# Base64 encoding for audio data
base64 = "0.22"

# Mime type detection
mime = "0.3"

[dev-dependencies]
tokio-test.workspace = true
wiremock.workspace = true
toml.workspace = true
