[package]
name = "application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
domain.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
fuzzydate.workspace = true
futures = "0.3"
parking_lot.workspace = true
aho-corasick.workspace = true
base64 = "0.22"

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
proptest.workspace = true
