[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
domain.workspace = true
application.workspace = true
ai_core.workspace = true
integration_proton.workspace = true
integration_caldav.workspace = true
integration_weather.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
config.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
vaultrs.workspace = true
parking_lot.workspace = true
futures = "0.3"

# OpenTelemetry
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true

# Caching
moka.workspace = true
redb = "2.6"
blake3.workspace = true
bincode = { version = "2.0", features = ["derive"] }

# Metrics
metrics.workspace = true

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
