[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
domain.workspace = true
application.workspace = true
ai_core.workspace = true
ai_speech.workspace = true
integration_proton.workspace = true
integration_caldav.workspace = true
integration_weather.workspace = true
integration_websearch.workspace = true
integration_whatsapp.workspace = true
integration_signal.workspace = true
integration_transit.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
config.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
vaultrs.workspace = true
parking_lot.workspace = true
futures = "0.3"

# OpenTelemetry
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true

# Caching
moka.workspace = true
redb = "3.1"
blake3.workspace = true
bincode = { version = "2.0", features = ["derive"] }

# Metrics
metrics.workspace = true

# Password hashing for API keys
argon2 = "0.5"

# Secret management with zeroization
secrecy.workspace = true

# Encryption
chacha20poly1305 = "0.10"

# Random number generation for jitter
rand = "0.9"

# Template engine
tera.workspace = true

# Cron scheduling
tokio-cron-scheduler.workspace = true
cron.workspace = true

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
wiremock.workspace = true
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
proptest.workspace = true
tempfile.workspace = true
toml = "0.8"
