[package]
name = "integration_proton"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
domain.workspace = true
application.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-test.workspace = true
serde_json.workspace = true
