[package]
name = "presentation_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "pisovereign-cli"
path = "src/main.rs"

[dependencies]
domain.workspace = true
application.workspace = true
infrastructure.workspace = true
ai_core.workspace = true
presentation_http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
anyhow.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }
rust-s3.workspace = true
chrono.workspace = true
rusqlite.workspace = true
utoipa = { version = "5", features = ["yaml"] }

[dev-dependencies]
tempfile = "3.15"
